--- a/aip.tex
+++ b/aip.tex
@@ -1837,14 +1837,14 @@ The condition on expansions at the third place removes three triangles from the 
 
 \Cref{fig: sierpinski 3-gasket} illustrates the self-similarity of the Sierpi\'nski $3$-gasket in $\RR^2$.  In general, notice that since each can be realized by removing a union of open sets from $\RR^n$, all $\sierp_{p,n}$ are closed sets.  
 \begin{figure}
-\begin{subfigure}{.48\textwidth}
+\begin{subfigure}{.49\textwidth}
   \centering
-  \includegraphics[width=\linewidth]{Pictures/sierpinski3_a.pdf}
+  \includegraphics[width=.9\linewidth]{Pictures/sierpinski3_a.pdf}
   \caption{Sierpi\'nski 3-gasket in $[0,1]^2$}
 \end{subfigure}
-\begin{subfigure}{.48\textwidth}
+\begin{subfigure}{.49\textwidth}
   \centering
-  \includegraphics[width=.987\linewidth]{Pictures/sierpinski3_b.pdf}  
+  \includegraphics[width=.9\linewidth]{Pictures/sierpinski3_b.pdf}  
   \caption{Sierpi\'nski 3-gasket in $[0,9]^2$}
 \end{subfigure}
 \caption{}
@@ -1879,24 +1879,24 @@ Since this intersection is a compact set, $\feas\fip_p(A,\vv{u})$ is also compac
 In \Cref{fig: feas fip}, the feasible set for $\fip_p(A,\vv{u})$ is shown in blue, the feasible set for $\LP(A,\vv{u})$ is shown in gray, and the optimal set is highlighted in green, for small values of $p$.  
 \begin{figure}
   \centering
-\begin{subfigure}{.48\textwidth}
+\begin{subfigure}{.49\textwidth}
 \centering
-  \includegraphics[width=1\textwidth]{Pictures/ex4_char2.pdf}\hskip .04\textwidth
+  \includegraphics[width=.8\textwidth]{Pictures/ex4_char2.pdf}\hskip .04\textwidth
 \caption{$p=2$}  
 \end{subfigure} 
-\begin{subfigure}{.48\textwidth}
+\begin{subfigure}{.49\textwidth}
 \centering
-\includegraphics[width=1\textwidth]{Pictures/ex4_char3.pdf}
+\includegraphics[width=.8\textwidth]{Pictures/ex4_char3.pdf}
 \caption{$p=3$}  
 \end{subfigure}
-\begin{subfigure}{.48\textwidth}
+\begin{subfigure}{.49\textwidth}
 \centering
-  \includegraphics[width=1\textwidth]{Pictures/ex4_char5.pdf}\hskip .04\textwidth
+  \includegraphics[width=.8\textwidth]{Pictures/ex4_char5.pdf}\hskip .04\textwidth
 \caption{$p=5$}  
 \end{subfigure}  
-\begin{subfigure}{.48\textwidth}
+\begin{subfigure}{.49\textwidth}
 \centering
-  \includegraphics[width=1\textwidth]{Pictures/ex4_char7.pdf}
+  \includegraphics[width=.8\textwidth]{Pictures/ex4_char7.pdf}
 \caption{$p=7$}  
 \end{subfigure}  
 \caption{The feasible set of $\Sigma_p(A, \vv{u})$ for $A$ and $\vv{u}$ described in \Cref{ex: feas fip}, for various $p$ values.}
