--- a/aip.tex
+++ b/aip.tex
@@ -432,6 +432,11 @@ In view of the Minkowski--Weyl Theorem (see \Cref{ss: euclidean spaces and conve
 then we would get a matrix obtained by replacing some rows of $A$ with zero.  
 } 
 
+\daniel[inline]{I should also add that there are some advantages to thinking about $\collapse{A}$ is obtained from $A$ by omitting columns, as opposed to replacing them with zero.  For instance, this interpretation is key in \Cref{aux program: D}, when defining the constraints of $\ip$.  If we instead replaced rows with zeros, then the modified definition of $\ip$ would be more involved.}
+
+\daniel[inline]{If this is what we stick with, then we should definitely clarify (probably immediately after the definition) that we are omitting rows of $A$, and not replacing them with zero.  OR, we could build this into the cool new examples Pedro has written up.}
+
+
 \begin{remark}  The assumption that $\O \neq \N$ implies that $\rb(\O)^{\perp} \neq \emptyset$.
 \end{remark}
 
